# FaceStack

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: facestack_client.py
deploy/: facestack.service
docker/: Dockerfile.rocm
docs/: CNAME  _config.yml  api.md  architecture.md  calibration.md  deployment.md  index.md  integration.md  usage.md
scripts/: bench.py  calibrate.py  check_env.py  enroll_dataset.py  export_reid_onnx.py  fetch_body_models.py  serve.sh  setup_rocm.sh  setup_rocm_motis.sh  smoke_e2e.py
src/facestack/: __init__.py  bodyengine.py  bodyindex.py  config.py  engine.py  index.py  linking.py  recognizer.py  runtime.py  schemas.py  video.py
src/facestack/service/: app.py
tests/: test_bodyindex.py  test_enroll_batch.py  test_index.py  test_linking.py  test_service_auth.py  test_video_body.py
