[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facestack"
version = "0.1.0"
description = "Fast, efficient and accurate face recognition engine (detection + ArcFace embeddings + vector search) served over REST."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "MTIVE SYSTEMS" }]
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# Thin HTTP client for consumer projects (client/facestack_client.py)
client = ["requests>=2.31"]
# Test/dev tooling
test = ["pytest>=8", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
